# qa_guru_3_17_hw

./: README.md  pyproject.toml
tests/: test_example.py
