[tool.poetry]
name = "qa guru hw"
version = "0.1.0"
description = "Qa guru hw"
authors = ["Maksim Kudaev <kudaev.m@nakukop.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
selene = "2.0.0b16"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
